# pydical

./: .clang-format  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
examples/: simplify_random.py
src/: main.cpp
